--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "yup": "^1.7.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
